# openflow_with_llm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  test_simple.py
.cursor/rules/: dependency-management.mdc  mcp-tools-usage.mdc  project-development.mdc
config/: env.example  nifi_config.yaml  nifi_env.sh
docs/: NIFI_SETUP.md  PROJECT_PURPOSE.md  PROJECT_RULES.md
examples/: test_mcp_server.py
scripts/: nifi_control.sh  nifi_quick.sh
src/: __init__.py  main.py
src/cli/: nifi_cli.py
src/llm/: __init__.py  intent_processor.py
src/llm/providers/: __init__.py  anthropic_provider.py  base_provider.py  openai_provider.py
src/mcp/: __init__.py  nifi_mcp_server.py
src/nifi/: __init__.py  api_client.py
src/ui/: __init__.py  chat_interface.py
src/utils/: __init__.py  config.py  nifi_manager.py
